correct paths for reading csvs

--- a/preprocessingdata.ipynb
+++ b/preprocessingdata.ipynb
@@ -26,14 +26,14 @@
    "outputs": [],
    "source": [
     "#load data\n",
-    "account_df = pd.read_csv('account_dim_20250325.csv')\n",
-    "fraud_claim_case_df = pd.read_csv('fraud_claim_case_20250325.csv')\n",
-    "fraud_claim_tran_df = pd.read_csv('fraud_claim_tran_20250325.csv')\n",
-    "rams_batch_df = pd.read_csv('rams_batch_cur_20250325.csv')\n",
-    "statement_fact_df = pd.read_csv('statement_fact_20250325.csv')\n",
-    "syf_id_df = pd.read_csv('syf_id_20250325.csv')\n",
-    "transaction_fact_df = pd.read_csv('transaction_fact_20250325.csv')\n",
-    "wrld_stor_tran_fact_df = pd.read_csv('wrld_stor_tran_fact_20250325.csv')"
+    "account_df = pd.read_csv('data/account_dim_20250325.csv')\n",
+    "fraud_claim_case_df = pd.read_csv('data/fraud_claim_case_20250325.csv')\n",
+    "fraud_claim_tran_df = pd.read_csv('data/fraud_claim_tran_20250325.csv')\n",
+    "rams_batch_df = pd.read_csv('data/rams_batch_cur_20250325.csv')\n",
+    "statement_fact_df = pd.read_csv('data/statement_fact_20250325.csv')\n",
+    "syf_id_df = pd.read_csv('data/syf_id_20250325.csv')\n",
+    "transaction_fact_df = pd.read_csv('data/transaction_fact_20250325.csv')\n",
+    "wrld_stor_tran_fact_df = pd.read_csv('data/wrld_stor_tran_fact_20250325.csv')"
    ]
   },
   {
