--- a/preprocessing/pp_rams_batch.ipynb
+++ b/preprocessing/pp_rams_batch.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Preprocessing Data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -21,19 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#load data\n",
-    "account_df = pd.read_csv('data/account_dim_20250325.csv')\n",
-    "fraud_claim_case_df = pd.read_csv('data/fraud_claim_case_20250325.csv')\n",
-    "fraud_claim_tran_df = pd.read_csv('data/fraud_claim_tran_20250325.csv')\n",
-    "rams_batch_df = pd.read_csv('data/rams_batch_cur_20250325.csv')\n",
-    "statement_fact_df = pd.read_csv('data/statement_fact_20250325.csv')\n",
-    "syf_id_df = pd.read_csv('data/syf_id_20250325.csv')\n",
-    "transaction_fact_df = pd.read_csv('data/transaction_fact_20250325.csv')\n",
-    "wrld_stor_tran_fact_df = pd.read_csv('data/wrld_stor_tran_fact_20250325.csv')"
+    "rams_batch_df = pd.read_csv('../data/rams_batch_cur_20250325.csv')"
    ]
   },
   {
@@ -46,7 +32,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -60,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
